--- a/UI/src/components/InfoSection_1.css
+++ b/UI/src/components/InfoSection_1.css
@@ -4,6 +4,7 @@
   width: 100%;
   margin-right: 50px;
   margin-left: 50px;
+  background-color: yellowgreen;
 }
 
 .info_img_1{
