--- a/UI/src/index.css
+++ b/UI/src/index.css
@@ -327,7 +327,7 @@ img.large{
   .search button {
     border-radius: 5px;
     border-right: none;
-    margin-left: 100%;
+    margin-left: 95%;
     margin-top: 13px;
     padding-top: 9px;
     width: 52px;
